hphp/hack/test/typecheck/reactive/mutable_as_hint6.php
<?hh // partial

class A {
  <<__NonRx("what?")>>
  public function m(<<__OwnedMutable>> A $a): void {
  }
}
